Work on NLP project

--- a/content/post/2023-06-17-topic-modeling-with-russian/index.Rmd
+++ b/content/post/2023-06-17-topic-modeling-with-russian/index.Rmd
@@ -37,7 +37,70 @@ The rest of this post will outline where the data was collected from, how the te
 
 ## Data Collection/Web Scraping
 
+I needed data from different sources for this project. I needed to find somewhere where I could get the text for songs by Viktor Tsoi as well as the text from Dostoevsky's published works. I was able to find the data from two different sources. 
+
+For Viktor Tsoi's songs, I ended up needing to webscrape the lyrcis for songs from the internet. I found a [website](https://lyric-text.ru/viktor-tsoy/) that contained links to the songs and their lyrics from Viktor Tsoi. I decided to use BeautifulSoup to webscrape, so I ended up copying the URLs for the four pages of songs. The code below outlines the process of getting the links for each song and saving the song title as well. 
+```{python, eval=FALSE}
+# Create empty list for links and song title
+links = []
+song_title = []
+# Loop through the four URLs to scrape from
+for url in urls:
+    # Specify header information related to your computer
+    headers = {
+        #header_information for your computer}
+    # Make a request to the web page
+    response = requests.get(url, headers=headers)
+    # Parse the HTML content on the page
+    soup = bs(response.content, "html.parser")
+    # Find all the div tags with the specific class
+    paragraphs = soup.find_all("div", {'class': 'content_box'})
+    # Loop through each found div tag
+    for paragraph in paragraphs:
+        # Pull all the anchors out
+        anchors = paragraph.find_all('a')
+        # Try to take the href from the anchor tag if possible
+        for anchor in anchors:
+            try:
+                links.append(anchor.attrs['href'])
+                song_title.append(anchor.get_text())
+            # print that the anchor is skipped if there is a KeyError resulting from no href attribute
+            except KeyError:
+                print("skipping this anchor because it doesn't have an href attribute")
+```
+
+After I extracted the links for each song, I looped through each link and extracted the song lyrics and saved the title and lyrics to a `.txt` file to be used later. In order to get the song lyrics, I only needed to extracted the paragraph element from the main div that contained the content on the page. The code for scraping the lyrics and saving them to a file are provided before: 
+
+```{python, eval=FALSE}
+with open(f"songs.txt", mode='w') as outfile:
+    # Write a header for the file
+    outfile.write("Title" + "\t" + " Lyrics" + '\n')
+    # Loop through the links
+    for i in range(len(links)):
+        # Get the HTML content
+        response = requests.get(links[i], headers=headers)
+        # Parse the HTML content on the page
+        soup = bs(response.content, "html.parser")
+        # Find all the divs with the specific class and then the paragraph inside
+        paragraphs = soup.find('div', {'class': 'content_box'}).find('p')
+        # Write out to text file if there is text
+        try:
+            outfile.write(song_title[i] + "\t" + paragraphs.get_text(strip=True) + '\n')
+            print(f'Writing {song_title[i]}')
+        except:
+            print("No text. Moving to next link")
+            continue
+```
+
+Finding the texts of Dostoevsky's works was a lot easier than getting the song lyrics I needed. There was a [Kaggle dataset](https://www.kaggle.com/datasets/d0rj3228/russian-literature/data) that had text files for 34 works of literature by Dostoevsky. This didn't include everything that Doestoevsky ever wrote, but it did include his major works, so I thought that it was enough for this project. 
+
+The Kaggle dataset also included a file that had the year the book was written, which was also need for determining how the topics changed over time. I had to manually create a file that had the year that each song was written. I used Wikipedia to get the years when songs were written. 
+
+Once I had collected all of the data, I was able to begin working with the data. There was a decent amount of preprocessing that needed to be done before I could try topic modeling. 
+
 ## Text Preprocessing
+
+There were a number of steps that I took to preprocess the text for analyzing and topic modeling. I'll walk through the general preprocessing steps that I took and then I will highlight a few specific details that relate to this specific project. 
 
 ## Topic Modeling using LDA
 
